# scriba

./: .gitignore  CMakeLists.txt  action.c  action.h  application.c  application.h  bottom_bar.c  bottom_bar.h  build.ps1  clock.c  clock.h  constants.h  cursor.c  cursor.h  key_bindings.c  key_bindings.h  main.c  makefile  overlay.c  overlay.h  scriba  text.c  text.h  utils.c  utils.h  vector.c  vector.h
